First version of external quirks definition support